--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,11 @@
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "socket.io-client": "^4.7.5",
+    "recharts": "^2.12.7",
+    "react-hot-toast": "^2.4.1",
+    "date-fns": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
