--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
+    "date-fns": "^3.6.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
-    "web-vitals": "^2.1.4",
-    "socket.io-client": "^4.7.5",
-    "recharts": "^2.12.7",
-    "react-hot-toast": "^2.4.1",
-    "date-fns": "^3.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
