--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,23 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "seed": "node src/seed.js"
+    "seed": "node src/seed.js",
+    "pm2:start": "npx pm2 start ecosystem.config.js",
+    "pm2:stop": "npx pm2 stop event-manager-backend",
+    "pm2:restart": "npx pm2 restart event-manager-backend",
+    "pm2:logs": "npx pm2 logs event-manager-backend",
+    "pm2:monitor": "npx pm2 monit",
+    "pm2:startup": "npx pm2 startup",
+    "pm2:save": "npx pm2 save",
+    "health": "curl http://localhost:5000/api/health",
+    "stress-test": "artillery quick --count 50 --num 100 http://localhost:5000/api/health"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +25,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -24,12 +35,15 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "morgan": "^1.10.1",
     "node-cron": "^3.0.3",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "artillery": "^2.0.26",
     "jest": "^30.1.3",
     "nodemon": "^3.1.10",
+    "pm2": "^5.4.3",
     "supertest": "^7.1.4"
   }
 }
